# AI_LLanguages

./: .gitignore  README.md  docker-compose.yml  import_words.py  pyproject.toml
ai/ai/: __init__.py  celery_config.py  settings.py  urls.py
ai/ai_recommend/: apps.py  task.py  tasks.py  urls.py
ai/models/: gbm_2025-10-10-test_1760084117.joblib  gbm_2025-10-10-test_1760095563.joblib
dataset/: data.py  gen.py  load_course.py  seed_skills_lessons.ps1  skill_lesson.py
pgadmin/: servers.json
server/: Dockerfile  api_urls.py  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  collecting_data.py  test.py
server/chat/: models.py  serializers.py  urls.py  utils.py  views.py
server/languages/: consumer.py  models.py  routing.py  serializers.py  views.py
server/learning/: models.py  serializers.py  views.py
server/media/: audio_to_base64.py  test.py
server/progress/: models.py  serializers.py  services.py  views.py
server/pron/: apps.py  models.py  scoring.py  serializers.py  urls.py  views.py
server/pron_attempts/: audio.webm  recording.webm
server/recommend/: export_learning_eval.py  exporters.py
server/server/: __init__.py  asgi.py  celery.py  settings.py  urls.py
server/social/: consumers.py  middleware.py  models.py  routing.py  serializers.py  services.py  tasks.py  views.py
server/speech/: serializers.py  services.py  services_block_tts.py  urls.py  views.py
server/users/: models.py  serializers.py  urls.py  views.py
server/utils/: __init__.py  _enum.py  config_log.py  email.py  filter_params.py  gencode.py  helper.py  (+4 more)
(+142 files in other folders)
